-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 4.3.0
-
None
Reproduction:
Make a Boundary.
Make a 2nd Boundary.
Put 1st Boundary in 2nd Boundary.
Try to resize/move 1st Boundary.
See image: "Qml view elements" can not be activated without moving "Test Application" first.
For Gerrit Dashboard: QTCREATORBUG-18368 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
215318,3 | ModelEditor: Allow selecting an overlapped boundaryitem | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |