ModelEditor: Allow selecting an overlapped boundaryitem

Note: The change in diagramscenemodel.cpp is just to make a method
public and keep the order (public before private). No other code change
in that file.

Task-number: QTCREATORBUG-18368
Change-Id: I15193d90f81aaee81f357a4d82eeeb74bb1f0583
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>